# HelpOfAi-Cli

./: .cnb.yml  .gitignore  .mailmap  .npmignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.ja-JP.md  README.md  README.vi.md  README.zh-CN.md  SECURITY.md  config.example.toml  flake.nix  package-lock.json  package.json
.devcontainer/: devcontainer.json
.github/: APPROVED_CONTRIBUTORS  AUTHOR_MAP  CODEOWNERS  FUNDING.yml
.github/ISSUE_TEMPLATE/: agent-task.yml  bug_report.md  feature_request.md
.github/scripts/: update-homebrew-tap.sh
.github/workflows/: auto-tag.yml  ci.yml  issue-gate.yml  nightly.yml  pr-gate.yml  release.yml  sync-cnb.yml  web.yml
.helpofai/: constitution.json
crates/agent/: Cargo.toml
crates/agent/src/: lib.rs
crates/app-server/: Cargo.toml
crates/app-server/src/: chat_completions.rs  lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs  metrics.rs  update.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/execpolicy/: Cargo.toml
crates/execpolicy/src/: bash_arity.rs  lib.rs
crates/helpflow/: Cargo.toml
crates/helpflow/src/: lib.rs  starlark_authoring.rs
crates/hooks/: Cargo.toml
crates/hooks/src/: lib.rs
crates/mcp/: Cargo.toml
crates/protocol/: Cargo.toml
crates/protocol/src/: fleet.rs  workroom.rs
crates/protocol/tests/: parity_protocol.rs
crates/release/: Cargo.toml
crates/release/src/: lib.rs
crates/secrets/: Cargo.toml
crates/secrets/src/: lib.rs
crates/state/: Cargo.toml
crates/state/src/: lib.rs
crates/state/tests/: parity_state.rs
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs
crates/tools/tests/: parity_tools.rs
crates/tui/: CHANGELOG.md  Cargo.toml  build.rs
crates/tui/src/: acp_server.rs  artifacts.rs  audit.rs  automation_manager.rs  client.rs  command_safety.rs  compaction.rs  composer_history.rs  composer_stash.rs  config.rs  config_persistence.rs  config_ui.rs  context_report.rs  dependencies.rs  features.rs  goal_loop.rs  hooks.rs  localization.rs  logging.rs  main.rs  mcp.rs  memory.rs  model_catalog.rs  model_registry.rs  model_routing.rs  network_policy.rs  prefix_cache.rs  project_context.rs  project_context_cache.rs  project_doc.rs  prompts.rs  request_tuning.rs  resource_telemetry.rs  runtime_api.rs  runtime_log.rs  runtime_mobile.html  runtime_threads.rs  session_manager.rs  settings.rs  skill_state.rs  (+6 more)
crates/tui/tests/: README.md  cache_guard.rs  directory_listing_acceptance.rs  palette_audit.rs  protocol_recovery.rs  qa_pty.rs  tool_lifecycle_acceptance.rs
deploy/tencent-lighthouse/cnb/: README.md  cnb.yml.example  tag_deploy.yml.example
deploy/tencent-lighthouse/examples/: feishu-bridge.env.example  runtime.env.example  telegram-bridge.env.example
deploy/tencent-lighthouse/systemd/: helpofai-feishu-bridge.service  helpofai-runtime.service  helpofai-telegram-bridge.service
docs/: ACCESSIBILITY.md  ACP_REGISTRY_SUBMISSION.md  AGENT_ETHOS.md  AGENT_RUNNER.md  AGENT_RUNTIME.md  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG_ARCHIVE.md  CLASSROOM_INSTALL.md  CLAUDE_PLUGIN_COMPAT.md  CNB_MIRROR.md  CONFIGURATION.md  CONTRIBUTORS.md  DOCKER.md  FLEET.md  GUIDE.md  HarmonyOS.md  INSTALL.md  KEYBINDINGS.md  LEGACY_PATHS.md  MCP.md  MEMORY.md  MODEL_LAB.md  MODES.md  OPERATIONS_RUNBOOK.md  PROVIDERS.md  REBRAND.md  RECEIPTS.md  RECURSIVE_SELF_IMPROVEMENT.md  RELEASE_CHECKLIST.md  RELEASE_RUNBOOK.md  RUNTIME_API.md  SANDBOX.md  SKILL_INVOCATION_DESIGN.md  SUBAGENTS.md  SWEBENCH.md  TENCENT_CLOUD_REMOTE_FIRST.md  TENCENT_LIGHTHOUSE_HK.md  TOOL_LIFECYCLE.md  TOOL_SURFACE.md  (+5 more)
docs/architecture/: command-dispatch.md  pr-issue-evidence-prep.md
docs/examples/: Dockerfile.toolbox  compose.toolbox.yml  fleet-dogfood.toml
docs/rfcs/: 1364-hooks-lifecycle.md  2189-persistence-sqlite.md  2190-mcp-modularization.md  2574-provider-fallback-chain.md  3209-workrooms.md  HARNESS_PROFILE_CUTLINE.md  REMOTE_SETUP_DESIGN.md  WHALEFLOW_EXTERNAL_MEMORY.md
docs/skills/: README.md
docs/skills/gh-assign-issues/: SKILL.md
docs/skills/gh-close-issues/: SKILL.md
docs/skills/gh-compile-issues/: SKILL.md
docs/skills/gh-credit-harvest/: SKILL.md
extensions/vscode/: README.md  package-lock.json  package.json
integrations/feishu-bridge/: .env.example  README.md  package-lock.json  package.json
integrations/telegram-bridge/: .env.example  README.md  package-lock.json  package.json
integrations/weixin-bridge/: .env.example  README.md  package.json
nix/: package.nix
npm/deepseek-tui/: README.md  package.json
npm/helpofai/: .npmignore  README.md  package.json
npm/runtime-sdk/: README.md  index.d.ts  index.js  package.json
scripts/: measure-tool-catalog.py  mobile-smoke.sh  sync-changelog.sh
scripts/benchmarks/: README.md  cli-compare.py  pinchbench_helpofai.py  run-pinchbench.sh  run-swebench.sh  run-terminal-bench.sh
scripts/installer/: helpofai.nsi
scripts/release/: app-server-smoke.sh  app-server-smoke.test.sh  branch-hygiene.sh  branch-hygiene.test.sh  check-ohos-deps.sh  check-published.sh  check-versions.sh  crates.sh  generate-release-body.sh  install.bat  install.sh  npm-wrapper-smoke.js  prepare-local-release-assets.js  prepare-release.sh  publish-crates.sh
scripts/remote-smoke/: README.md  agent-session.sh  setup-vm.sh
scripts/tencent-lighthouse/: bootstrap-ubuntu.sh  doctor.sh  install-services.sh
web/: .env.example  README.md  package-lock.json  package.json  wrangler.jsonc
web/app/: opengraph-image.tsx
web/components/: footer.tsx  install-binary.tsx  nav.tsx  thinking-trace.tsx
web/lib/: community-agent-tasks.ts  community-agent.ts  content-watch.ts  deepseek.ts  facts-drift.ts  github.test.ts  github.ts  page-meta.ts  roadmap-feed.ts
web/scripts/: derive-facts.mjs
workflows/: issue_audit.workflow.js  rlm_cache_change.star
(+159 files in other folders)
