[package]
name = "helpofai-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Model/provider registry and fallback strategy for DeepSeek workspace architecture"

[dependencies]
helpofai-config = { path = "../config", version = "0.8.62" }
serde.workspace = true
