[package]
name = "helpofai-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Agentic terminal facade for open-source and open-weight coding models"

[[bin]]
name = "helpofai"
path = "src/main.rs"

# Short-form convenience alias — forwards to `helpofai` silently.
[[bin]]
name = "hoa"
path = "src/bin/hoa_legacy_shim.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
helpofai-agent = { path = "../agent", version = "0.8.62" }
helpofai-app-server = { path = "../app-server", version = "0.8.62" }
helpofai-config = { path = "../config", version = "0.8.62" }
helpofai-execpolicy = { path = "../execpolicy", version = "0.8.62" }
helpofai-mcp = { path = "../mcp", version = "0.8.62" }
helpofai-release = { path = "../release", version = "0.8.62" }
helpofai-secrets = { path = "../secrets", version = "0.8.62" }
helpofai-state = { path = "../state", version = "0.8.62" }
chrono.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
rustls.workspace = true
semver.workspace = true
tokio.workspace = true
sha2.workspace = true
tempfile.workspace = true
tracing.workspace = true

[dev-dependencies]
