[package]
name = "helpofai-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core runtime boundaries for DeepSeek workspace architecture"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
helpofai-agent = { path = "../agent", version = "0.8.62" }
helpofai-config = { path = "../config", version = "0.8.62" }
helpofai-execpolicy = { path = "../execpolicy", version = "0.8.62" }
helpofai-hooks = { path = "../hooks", version = "0.8.62" }
helpofai-mcp = { path = "../mcp", version = "0.8.62" }
helpofai-protocol = { path = "../protocol", version = "0.8.62" }
helpofai-state = { path = "../state", version = "0.8.62" }
helpofai-tools = { path = "../tools", version = "0.8.62" }
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
