[package]
name = "helpofai-execpolicy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Execution policy and approval model parity for DeepSeek workspace architecture"

[dependencies]
anyhow.workspace = true
helpofai-protocol = { path = "../protocol", version = "0.8.62" }
serde.workspace = true
