[package]
name = "helpofai-release"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared HelpOfAi release discovery and version comparison helpers"

[dependencies]
anyhow.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
